--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -1154,8 +1154,16 @@ video {
   width: 4rem;
 }
 
+.w-2 {
+  width: 0.5rem;
+}
+
 .w-20 {
   width: 5rem;
+}
+
+.w-3 {
+  width: 0.75rem;
 }
 
 .w-32 {
@@ -1168,10 +1176,6 @@ video {
 
 .w-4 {
   width: 1rem;
-}
-
-.w-4\/5 {
-  width: 80%;
 }
 
 .w-40 {
@@ -1224,18 +1228,6 @@ video {
 
 .w-px {
   width: 1px;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-3\/5 {
-  width: 60%;
-}
-
-.w-3 {
-  width: 0.75rem;
 }
 
 .min-w-\[19em\] {
@@ -1702,6 +1694,10 @@ video {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.text-ellipsis {
+  text-overflow: ellipsis;
 }
 
 .whitespace-nowrap {
@@ -3414,12 +3410,12 @@ animation: var(--animate-spin);
     height: 15rem;
   }
 
-  .sm\:w-auto {
-    width: auto;
-  }
-
   .sm\:w-4\/5 {
     width: 80%;
+  }
+
+  .sm\:w-auto {
+    width: auto;
   }
 
   .sm\:grid-cols-1 {
@@ -3469,10 +3465,6 @@ animation: var(--animate-spin);
 
   .md\:w-64 {
     width: 16rem;
-  }
-
-  .md\:w-2\/3 {
-    width: 66.666667%;
   }
 
   .md\:grid-cols-2 {
